Fix ES translation

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -50,7 +50,7 @@
     "matchesButton": "Predicciones de partidos",
     "finalButton": "Apuestas finales",
     "myPredictions": "Mis predicciones",
-    "myPredictionsButton": "Mis predicciones realizadas",
+    "myPredictionsButton": "Mis predicciones",
     "remainingGroupPhaseKeyBets": "Apuestas clave restantes: ★",
     "remainingMatches": "Partidos restantes: ",
     "keyBet": "Apuesta clave",
